create new master

--- a/incontext/templates/masters/index.html
+++ b/incontext/templates/masters/index.html
@@ -2,20 +2,51 @@
 
 {% block header %}
 <h1>{% block title %}Masters{% endblock %}</h1>
-{% if masters|length == 0 %}
-<p>Empty</p>
-{% endif %}
 <p><a href="{{ url_for('masters.new') }}">New</a></p>
 {% endblock %}
 {% block main %}
-{% for master in masters %}
-<article>
-	<h2>{{ master['name'] }} ({{ master['master_type'] }})</h2>
-	<p>{{ masters['description'] }}</p>
-	<p><b>Created: </b>{{ master['created'].strftime('%d.%m.%Y') }} | <a href="{{ url_for('masters.view', master_id=master['id']) }}">View</a> | <a href="{{ url_for('masters.edit', master_id=master['id']) }}">Edit</a></p>
-	{% if not loop.last %}
-	<hr>
-	{% endif %}
-</article>
-{% endfor %}
+<div class="masters-overview">
+	<section id="list-masters">
+		<h2>List Masters</h2>
+		{% if list_masters|length == 0 %}
+		<p>Empty</p>
+		{% endif %}
+		{% for list_master in list_masters %}
+		<article>
+			<h3>{{ list_master['name'] }}</h3>
+			{% if list_master['enabled'] %}
+			<p>(Enabled)</p>
+			{% else %}
+			<p>(Disabled)</p>
+			{% endif %}
+			<p>{{ list_master['description'] }}</p>
+			<p><b>Created: </b>{{ list_master['created'].strftime('%d.%m.%Y') }} | <a href="{{ url_for('masters.view', master_id=list_master['id']) }}">View</a> | <a href="{{ url_for('masters.edit', master_id=list_master['id']) }}">Edit</a></p>
+			{% if not loop.last %}
+			<hr>
+			{% endif %}
+		</article>
+		{% endfor %}
+	</section>
+	<section id="agent-masters">
+		<h2>Agent Masters</h2>
+		{% if agent_masters|length == 0 %}
+		<p>Empty</p>
+		{% endif %}
+		{% for agent_master in agent_masters %}
+		<article>
+			<h3>{{ agent_master['name'] }}</h3>
+			{% if agent_master['enabled'] %}
+			<p>(Enabled)</p>
+			{% else %}
+			<p>(Disabled)</p>
+			{% endif %}
+			<p>{{ agent_master['description'] }}</p>
+			<p><b>Created: </b>{{ agent_master['created'].strftime('%d.%m.%Y') }} | <a href="{{ url_for('masters.view', master_id=agent_master['id']) }}">View</a> | <a href="{{ url_for('masters.edit', master_id=agent_master['id']) }}">Edit</a></p>
+			{% if not loop.last %}
+			<hr>
+			{% endif %}
+		</article>
+		{% endfor %}
+	</section>
+</div>
 {% endblock %}
