--- a/incontext/templates/masters/new.html
+++ b/incontext/templates/masters/new.html
@@ -12,11 +12,11 @@
 	<fieldset>
 		<legend>Select a master type:</legend>
 		<div>
-			<input type="radio" name="master_type" id="list">
+			<input type="radio" name="master_type" id="list" value="List">
 			<label for="list">List</label>
 		</div>
 		<div>
-			<input type="radio" name="master_type" id="agent">
+			<input type="radio" name="master_type" id="agent" value="Agent">
 			<label for="agent">Agent</label>
 		</div>
 	</fieldset>
