--- a/incontext/static/styles.css
+++ b/incontext/static/styles.css
@@ -63,3 +63,8 @@ fieldset div {
 	grid-template-columns: 2fr 4fr;
 }
 
+.masters-overview {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	column-gap: 10px;
+}
