re-jigged and finished up new master creation and started view list master. other small improvements.

--- a/incontext/templates/auth/login.html
+++ b/incontext/templates/auth/login.html
@@ -7,7 +7,7 @@
 {% block main %}
 	<form method="post">
 		<label for="username">Username
-			<input id="username" name="username" required>
+			<input id="username" name="username" required autofocus>
 		</label>
 		<label for="password">Password
 			<input id="password" name="password" type="password" required>
