--- a/incontext/templates/auth/register.html
+++ b/incontext/templates/auth/register.html
@@ -7,7 +7,7 @@
 {% block main %}
 	<form method="post">
 		<label for="username">Username
-			<input id="username" name="username" required>
+			<input id="username" name="username" required autofocus>
 		</label>
 		<label for="password">Password
 			<input id="password" name="password" type="password" required>
