--- a/incontext/templates/masters/view.html
+++ b/incontext/templates/masters/view.html
@@ -12,6 +12,38 @@
 {% if master['items']|length == 0 %}
 	<p>Empty</p>
 	<a href="{{ url_for('masters.new_item', master_id=master['id']) }}">New Item</a>
-</section>
+{% else %}
+	<a href="{{ url_for('masters.new_item', master_id=master['id']) }}">New Item</a>
+	<table class="item-table">
+		<tr>
+			<th>ID</th>
+			<th>Name</th>
+			{% for detail in master["details"] %}
+			<th>{{ detail['name'] }}</th>
+			{% endfor %}
+			<th>Created</th>
+		</tr>
+		{% for item in master["items"] %}
+		<tr>
+			<td>{{ item['id'] }}</td>
+			{% if item['name']|length > 30 %}
+			<td>{{ item['name']|truncate(30,false,'...') }}</td>
+			{% else %}
+			<td>{{ item['name'] }}</td>
+			{% endif %}
+			{% for content in master['contents'] %}
+			{% if content|length > 30 %}
+			<td>{{ content|truncate(30,false,'...') }}</td>
+			{% else %}
+			<td>{{ content }}</td>
+			{% endif %}
+			{% endfor %}
+			<td>{{ item['created'].strftime('%d.%m.%Y') }}</td>
+			<td><a href="{{ url_for('masters.view_item', master_id=master['id'], item_id=item['id']) }}">View</a></td>
+			<td><a href="{{ url_for('masters.edit_item', master_id=master['id'], item_id=item['id']) }}">Edit</a></td>
+		</tr>
+		{% endfor %}
+	</table>
 {% endif %}
+</section>
 {% endblock %}
